# reach

./: .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  index.html  prometheus.yml  release-please-config.json
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
assets/: index-BwyXIB3U.css  index-DNgdC29b.css  index-DQOIE5Cd.js  index-bGBGiOXZ.js
config/: chrome-policies.json  openbox-rc.xml
crates/reach-browserd/src/: main.rs
crates/reach-cdp/: Cargo.toml
crates/reach-cdp/src/: commands.rs  lib.rs
crates/reach-cli/: Cargo.toml  README.md
crates/reach-cli/src/: config.rs  docker.rs  lib.rs  main.rs  mcp.rs  scraper.rs
crates/reach-cli/src/commands/: connect.rs  create.rs  destroy.rs  exec.rs  list.rs  mod.rs  screenshot.rs  serve.rs  vnc.rs
crates/reach-cli/tests/: config_types.rs  docker_types.rs  e2e_container.rs  mcp_types.rs
crates/reach-scraper/: Cargo.toml
crates/reach-scraper/src/: adaptive.rs  agent.rs  cdp_fetcher.rs  lib.rs  static_fetcher.rs  stealth.rs
crates/reach-supervisor/: Cargo.toml  README.md
crates/reach-supervisor/src/: health.rs  lib.rs  main.rs  processes.rs  signals.rs
crates/reach-supervisor/tests/: process_types.rs
docs/: architecture.md  deployment.md  mcp-tools.md  scraping.md
scripts/: setup-scrapling.sh
tests/: e2e_container.rs
