[package]
name = "reach-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PID 1 process supervisor for reach sandbox containers"

[lib]
name = "reach_supervisor"
path = "src/lib.rs"

[[bin]]
name = "reach-supervisor"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

nix = { version = "0.29", features = ["signal", "process"] }
prometheus = "0.13"
